--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "json-server": "^0.17.0",
+    "nft.storage": "^6.4.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
