--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "ethers": "^5.6.9",
     "https-browserify": "^1.0.0",
+    "ipfs": "^0.63.5",
     "json-server": "^0.17.0",
     "nft.storage": "^6.4.0",
     "os-browserify": "^0.3.0",
