--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "enhanced-resolve": "^5.10.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "react-app-rewired": "^2.2.1",
