--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
