--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.3",
     "react-timer-hook": "^3.0.5",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.1",
