--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.9",
     "https-browserify": "^1.0.0",
     "ipfs": "^0.63.5",
@@ -38,6 +39,7 @@
     "react-timer-hook": "^3.0.5",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.1",
+    "valid-url": "^1.0.9",
     "web-vitals": "^2.1.0",
     "web3": "^1.7.4",
     "web3-utils": "^1.7.4"
