--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.2",
     "react-infinite-scroll-component": "^6.1.0",
